force-app/main/default/objects/Lead/fields/AgentConversation_ID__c.field-meta.xml
<CustomField>
    <fullName>AgentConversation_ID__c</fullName>
    <label>Agent Conversation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>