force-app/main/default/objects/Lead/fields/Assigned_Dealership__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Dealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Assigned)</relationshipLabel>
    <relationshipName>AssignedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>