force-app/main/default/objects/Lead/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Customer zip code captured during conversation. find the nearest dealership.</description>
    <label>Postal Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>