force-app/main/default/objects/Lead/fields/Preferred_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Channel__c</fullName>
    <label>Preferred Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>