force-app/main/default/objects/Lead/fields/Vehicle_Interest__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Interest</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads (Vehicle Interest)</relationshipLabel>
    <relationshipName>LeadsVehicleInterest</relationshipName>
    <type>Lookup</type>
</CustomField>